# ITL.BrainCell.Mcp

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
